[gd_scene load_steps=22 format=3 uid="uid://b4b7axeotu2yb"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_gu3lw"]
[ext_resource type="Texture2D" uid="uid://okh0yxfc51qs" path="res://assets/cursor.png" id="2_fpd2d"]
[ext_resource type="Script" path="res://scripts/target_spawn.gd" id="2_jjmom"]
[ext_resource type="Script" path="res://scripts/cursor_script.gd" id="3_mg7mj"]
[ext_resource type="Script" path="res://scripts/misslie_spawn.gd" id="3_xo8la"]
[ext_resource type="Texture2D" uid="uid://b24drgq2srrb2" path="res://assets/ground.png" id="4_3n5sa"]
[ext_resource type="AudioStream" uid="uid://d0qib82vrxeid" path="res://assets/laserShoot.wav" id="6_cdvfn"]
[ext_resource type="Script" path="res://scripts/GUIMain.gd" id="7_yexiy"]
[ext_resource type="Texture2D" uid="uid://dlucsmomih1no" path="res://assets/logo.png" id="8_ny0uy"]
[ext_resource type="FontFile" uid="uid://delf3wueugmb1" path="res://assets/Pixellari.ttf" id="9_4i13m"]
[ext_resource type="AudioStream" uid="uid://68rw1iy027si" path="res://assets/jump (1).wav" id="11_hpk7q"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nkf58"]
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_siyst"]
size = Vector2(14.4, 13.2)

[sub_resource type="Animation" id="Animation_c1erk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cursor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_nvvpf"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cursor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(3.5, 3.5), Vector2(2.5, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3uni"]
_data = {
"RESET": SubResource("Animation_c1erk"),
"shoot": SubResource("Animation_nvvpf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtbo6"]
size = Vector2(1260, 34)

[sub_resource type="Animation" id="Animation_j0wry"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GetStartText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(210, 114)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GetStartText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(325, 520)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ScoreText:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, -40)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GetStartText:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Fling your mouse to play"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ScoreReport:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(470, 313)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HighestScore:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(458, 353)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ScoreReport:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HighestScore:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("HighestScore:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(500, 34)]
}

[sub_resource type="Animation" id="Animation_gkg3c"]
resource_name = "dead"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GetStartText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(210, 95), Vector2(210, 114)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GetStartText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(325, 540), Vector2(325, 520)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ScoreText:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, 10), Vector2(7, -40)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GetStartText:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Press anywhere to restart"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ScoreReport:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(272, 295), Vector2(272, 313)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HighestScore:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(272, 353), Vector2(272, 360)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ScoreReport:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HighestScore:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("HighestScore:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(500, 34)]
}

[sub_resource type="Animation" id="Animation_jxoy1"]
resource_name = "game_start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GetStartText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(210, 114), Vector2(210, 95)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GetStartText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(325, 520), Vector2(325, 540)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ScoreText:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, -40), Vector2(7, 10)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GetStartText:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Fling anywhere to start"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ur2ke"]
_data = {
"RESET": SubResource("Animation_j0wry"),
"dead": SubResource("Animation_gkg3c"),
"game_start": SubResource("Animation_jxoy1")
}

[node name="CursorBox" type="Node2D"]
script = ExtResource("1_gu3lw")

[node name="Body2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_nkf58")

[node name="Targets" type="Node2D" parent="."]
script = ExtResource("2_jjmom")

[node name="SpawnTimer" type="Timer" parent="Targets"]
wait_time = 3.0
autostart = true

[node name="Misslies" type="Node2D" parent="."]
script = ExtResource("3_xo8la")

[node name="SpawnTimer" type="Timer" parent="Misslies"]
wait_time = 4.0
autostart = true

[node name="Cursor" type="CharacterBody2D" parent="."]
process_mode = 3
position = Vector2(522, 589)
slide_on_ceiling = false
script = ExtResource("3_mg7mj")

[node name="Cursor" type="Sprite2D" parent="Cursor"]
texture_filter = 1
position = Vector2(4, 5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_fpd2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor"]
position = Vector2(4, 5)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_siyst")

[node name="AnimPlay" type="AnimationPlayer" parent="Cursor"]
libraries = {
"": SubResource("AnimationLibrary_g3uni")
}

[node name="Area2D" type="Area2D" parent="Cursor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
position = Vector2(15, 13)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_siyst")

[node name="ShootSound" type="AudioStreamPlayer" parent="Cursor"]
stream = ExtResource("6_cdvfn")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(88, 617)

[node name="NewPiskel(2)" type="Sprite2D" parent="Ground"]
texture_filter = 1
texture_repeat = 2
position = Vector2(483, 14)
scale = Vector2(5.53125, 6.2)
texture = ExtResource("4_3n5sa")
region_enabled = true
region_rect = Rect2(0, 0, 250, 5)
region_filter_clip_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(438, 15)
shape = SubResource("RectangleShape2D_vtbo6")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 999.0
offset_bottom = 649.0
script = ExtResource("7_yexiy")

[node name="ScoreText" type="Label" parent="UI"]
layout_mode = 0
offset_left = 7.0
offset_top = -40.0
offset_right = 120.0
offset_bottom = -6.0
theme_override_colors/font_color = Color(0.180392, 0.156863, 0.160784, 1)
theme_override_fonts/font = ExtResource("9_4i13m")
theme_override_font_sizes/font_size = 30
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.5
offset_top = 114.0
offset_right = 299.5
offset_bottom = 293.0
texture = ExtResource("8_ny0uy")
expand_mode = 1
stretch_mode = 4

[node name="GetStartText" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -174.5
offset_top = -129.0
offset_right = 201.5
offset_bottom = -61.0
theme_override_colors/font_color = Color(0.156863, 0.156863, 0.180392, 1)
theme_override_fonts/font = ExtResource("9_4i13m")
theme_override_font_sizes/font_size = 30
text = "Fling your mouse to play"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AnimPlay" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_ur2ke")
}

[node name="ScoreReport" type="Label" parent="UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 470.0
offset_top = 313.0
offset_right = 970.0
offset_bottom = 347.0
pivot_offset = Vector2(250, 0)
theme_override_colors/font_color = Color(0.180392, 0.156863, 0.160784, 1)
theme_override_fonts/font = ExtResource("9_4i13m")
theme_override_font_sizes/font_size = 30
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighestScore" type="Label" parent="UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 458.0
offset_top = 353.0
offset_right = 958.0
offset_bottom = 387.0
pivot_offset = Vector2(250, 0)
theme_override_colors/font_color = Color(0.180392, 0.156863, 0.160784, 1)
theme_override_fonts/font = ExtResource("9_4i13m")
theme_override_font_sizes/font_size = 30
text = "Highest: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiffTime" type="Timer" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_hpk7q")

[connection signal="timeout" from="Targets/SpawnTimer" to="Targets" method="_spawn_timeout"]
[connection signal="timeout" from="Misslies/SpawnTimer" to="Misslies" method="_on_spawn_timer_timeout"]
[connection signal="area_entered" from="Cursor/Area2D" to="Cursor" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Cursor/Area2D" to="Cursor" method="_on_area_2d_area_exited"]
[connection signal="timeout" from="DiffTime" to="." method="_on_diff_time_timeout"]
